[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/MainPanel/RoundInfoPanel_V2.gd" type="Script" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/PlayerHealthPanel/PlayerHealthPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/RoundIndicatorPanel/RoundIndicatorPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/MainPanel/Assets/RoundInfoPanelV2_Border.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/MainPanel/Assets/RoundInfoPanelV2_BodyBackground.png" type="Texture" id=5]

[node name="RoundInfoPanel_V2" type="MarginContainer"]
margin_right = 17.0
margin_bottom = 40.0
rect_min_size = Vector2( 114, 0 )
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 118.0
margin_bottom = 90.0
texture = ExtResource( 5 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 2.0
margin_bottom = 90.0
size_flags_horizontal = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 116.0
margin_right = 118.0
margin_bottom = 90.0
size_flags_horizontal = 10
texture = ExtResource( 4 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 118.0
margin_bottom = 2.0
size_flags_vertical = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 88.0
margin_right = 118.0
margin_bottom = 90.0
size_flags_vertical = 10
texture = ExtResource( 4 )
stretch_mode = 2

[node name="ContentPanel" type="MarginContainer" parent="."]
margin_right = 118.0
margin_bottom = 90.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ContentPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 114.0
margin_bottom = 86.0

[node name="PlayerHealthPanel" parent="ContentPanel/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 5.0
margin_right = 105.0
size_flags_horizontal = 6

[node name="RoundIndicatorPanel" parent="ContentPanel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 24.0
margin_bottom = 82.0
size_flags_horizontal = 6
